fixed complete process removal logic